[Feature] 스케치 생성 API 연결
