# src/libs/core-api/api/model/create-sketch-request.ts
@@ -1,0 +1,33 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BlockInfrastructure-Core
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface CreateSketchRequest
+ */
+export interface CreateSketchRequest {
+  /**
+   * 스케치 이름입니다.
+   * @type {string}
+   * @memberof CreateSketchRequest
+   */
+  name: string;
+  /**
+   * 스케치 설명입니다.
+   * @type {string}
+   * @memberof CreateSketchRequest
+   */
+  description: string;
+}
