# src/libs/core-api/openapi.yaml
@@ -230,6 +230,49 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
       security:
         - JwtAuthenticationFilter: []
+    post:
+      tags:
+        - Sketch
+      summary: 채널 내에 빈 스케치를 새로 추가합니다.
+      description: 이 API는 채널의 Owner만 사용할 수 있습니다.
+      operationId: CreateSketchAsync
+      parameters:
+        - name: channelId
+          in: path
+          description: 채널 ID
+          required: true
+          style: simple
+          schema:
+            type: string
+      requestBody:
+        description: 스케치 생성 요청
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateSketchRequest'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/CreateSketchRequest'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/CreateSketchRequest'
+      responses:
+        '200':
+          description: 스케치 생성에 성공한 경우.
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/SketchResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SketchResponse'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/SketchResponse'
+        '403':
+          description: 스케치를 생성하는데 채널 권한이 부족한 경우(해당 API에서는 owner권한만 허용.)
+      security:
+        - JwtAuthenticationFilter: []
   /users/me:
     get:
       tags:
@@ -316,6 +359,21 @@ components:
           type: string
           description: 'Optional: 채널의 프로필 이미지 URL입니다.'
           nullable: true
+      additionalProperties: false
+    CreateSketchRequest:
+      required:
+        - description
+        - name
+      type: object
+      properties:
+        name:
+          minLength: 1
+          type: string
+          description: 스케치 이름입니다.
+        description:
+          minLength: 1
+          type: string
+          description: 스케치 설명입니다.
       additionalProperties: false
     CredentialProvider:
       enum:
@@ -424,9 +482,11 @@ components:
       required:
         - blockSketch
         - channelId
+        - createdAt
         - description
         - name
         - sketchId
+        - updatedAt
       type: object
       properties:
         sketchId:
@@ -447,6 +507,14 @@ components:
           description: 스케치의 채널 ID입니다.
         blockSketch:
           description: 스케치의 블록 스케치입니다.
+        createdAt:
+          type: string
+          description: 생성일
+          format: date-time
+        updatedAt:
+          type: string
+          description: 마지막 수정일
+          format: date-time
       additionalProperties: false
     TokenResponse:
       required:
